# llm-from-scratch

./: .firebaserc  .gitignore  README.md  data.py  export_onnx.py  firebase.json  generate.py  inference.py  interpretability.py  model.py  pyproject.toml  tokenizer.py  tokenizer_scratch.py  train.py
c/: .gitignore  ARCH.md  Makefile  README.md  export.py  export_q8.py  run.c  run.cu  runq.c  train.c  train.cu
checkpoints/: .gitignore
docs/: architecture.md  distillation.md  flash_attention.md  lora.md  math.md  moe_gqa.md  tokenizer.md  training.md
scripts/: build_package.py  distill_generate.py  distill_train.py  generate.py  inference.py  interpretability.py  prepare_data.py  train.py  train_lora.py
src/tiny_llm/: __init__.py  configs.py  data.py  model.py  tokenizer.py
src/tiny_llm/models/: __init__.py  dense_llm.py  moe_llm.py
src/tiny_llm/modules/: __init__.py  attention.py  ffn.py  lora.py  norm.py  rope.py
tests/: test_data.py  test_distillation.py  test_flash_attention.py  test_lora.py  test_model.py  test_moe.py  test_norm_and_exporters.py  test_numpy_inference.py  test_tokenizer.py
tools/export/: export_c.py  export_onnx.py  export_q8.py
ui/: index.html  script.js  style.css
