[project]
name = "llm-from-scratch"
version = "0.1.0"
description = "A simple custom LLM trained from scratch in PyTorch"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "torch>=2.0.0",
    "tokenizers>=0.19.0",
    "streamlit>=1.30.0",
    "pandas>=2.0.0",
    "numpy>=1.24.0",
    "plotly>=5.18.0",
    "matplotlib>=3.10.9",
    "seaborn>=0.13.2"
]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
]

[tool.pytest.ini_options]
pythonpath = ["."]


